<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:text="@string/title_no"
        android:id="@+id/tvlnobrg"
        android:gravity="center"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".4"
        android:text="@string/title_nmbrg"
        android:id="@+id/tvlnmbrg"
        android:gravity="center"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:text="@string/title_ktbrg"
        android:id="@+id/tvlktbrg"
        android:gravity="center"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:text="@string/title_stokhbrg"
        android:id="@+id/tvlstbrg"
        android:gravity="center"/>
</LinearLayout>