<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tampiltransaksi.FragmentDetailTransaksi">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_detail_trx"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_alignParentTop="true"
        android:id="@+id/tvtitle_tambah_brg"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvtitle_tambah_brg"
        android:layout_marginTop="25dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="25dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:id="@+id/edbbtglbeli"
                    android:hint="@string/title_tglbeli"
                    android:ems="10">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:id="@+id/btnbbtglbeli"
                    android:src="@drawable/ic_outline_calendar_month_12"
                    android:layout_centerInParent="true"
                    android:layout_margin="5dp"/>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edbbnmbrg"
                android:hint="@string/title_namabrg"
                android:layout_marginBottom="20dp"
                android:ems="10">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/title_ktgrbrg"
                android:layout_marginBottom="20dp"
                android:ems="10">
                <AutoCompleteTextView
                    android:id="@+id/ddaktgr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edbbjmlhbrg"
                android:hint="@string/title_jmlhbrg"
                android:layout_marginBottom="20dp"
                android:ems="10">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edbbbeli"
                android:hint="@string/title_ttlbeli"
                android:layout_marginBottom="20dp"
                android:ems="10">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edbbbelisatu"
                android:hint="@string/title_hrgbeli"
                android:layout_marginBottom="20dp"
                android:enabled="false"
                android:ems="10">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edbbjual"
                android:hint="@string/title_hrgjual"
                android:layout_marginBottom="20dp"
                android:ems="10">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/title_hapus_trx"
                        android:id="@+id/btnhpsbtrx"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white" />
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/title_ubah_trx"
                        android:id="@+id/btnubhbtx"
                        android:textAllCaps="true"
                        android:layout_marginLeft="5dp"
                        android:textColor="@android:color/white" />

                </LinearLayout>
                 </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>