<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tampilmenu.FragmentPembelianBarang">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_tbeli_trx"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_alignParentTop="true"
        android:id="@+id/tvtitle_tambah_brg"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvtitle_tambah_brg"
        android:layout_marginTop="25dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="25dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:id="@+id/edttglbeli"
                    android:hint="@string/title_tglbeli"
                    android:ems="10">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:id="@+id/btntglbeli"
                    android:src="@drawable/ic_outline_calendar_month_12"
                    android:layout_centerInParent="true"
                    android:layout_margin="5dp"/>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtnmbrg"
                android:hint="@string/title_namabrg"
                android:layout_marginBottom="20dp"
                android:ems="10">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/title_ktgrbrg"
                android:layout_marginBottom="20dp"
                android:ems="10">
                <AutoCompleteTextView
                    android:id="@+id/attktgr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtjmlhbrg"
                android:hint="@string/title_jmlhbrg"
                android:layout_marginBottom="20dp"
                android:ems="10">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtbeli"
                android:hint="@string/title_ttlbeli"
                android:layout_marginBottom="20dp"
                android:ems="10">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtbelisatu"
                android:hint="@string/title_hrgbeli"
                android:layout_marginBottom="20dp"
                android:enabled="false"
                android:ems="10">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtjual"
                android:hint="@string/title_hrgjual"
                android:layout_marginBottom="20dp"
                android:ems="10">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    android:id="@+id/pgtmbhbrg"/>

                <Button
                    android:id="@+id/btntmbhbrg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_tambah_brg"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>