<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PenggunaanAplikasi"
    android:orientation="vertical"
    android:layout_margin="25dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="penggunaan aplikasi"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ppara"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:layout_marginTop="15dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="ara"
        android:layout_marginTop="5dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/copyright"
        android:layout_marginTop="5dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailtutor"
        android:layout_marginTop="15dp"/>

</LinearLayout>