<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrasi"
    android:orientation="vertical"
    android:layout_margin="25dp"
    android:gravity="center">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_daftar"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="100dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edregnama"
        android:hint="@string/titlen_toko"
        android:layout_marginBottom="20dp"
        android:ems="10">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edregemail"
        android:hint="@string/title_email"
        android:layout_marginBottom="20dp"
        android:ems="10">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edregpass"
        android:hint="Kata Sandi Baru"
        android:layout_marginBottom="20dp"
        android:ems="10">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/pgdaftar"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_daftar"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:id="@+id/btndaftar"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ATAU"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Sudah Memiliki Akun"
        android:textColor="@android:color/white"
        android:textAllCaps="true"
        android:id="@+id/btnrmasuk"/>
</LinearLayout>